--- a/textbook/ch2.ipynb
+++ b/textbook/ch2.ipynb
@@ -171,11 +171,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "2dca5a87",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# 2.4 Local Optimization Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8b6739f",
+   "metadata": {},
    "source": []
   }
  ],
