Complete ch2 exer at 2.6

--- a/textbook/ch2.ipynb
+++ b/textbook/ch2.ipynb
@@ -220,7 +220,9 @@
     "    - diminishing steplength rules  \n",
     "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251114020701.png)\n",
     "        - step size decrease\n",
-    "        - but still go through the whole space"
+    "        - but still go through the whole space  \n",
+    "- limit of Random Research  \n",
+    "    dimension increases, probablity of finding the descending direction decreases"
    ]
   },
   {
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4830a6b9",
    "metadata": {},
    "outputs": [
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0e1f81cc",
    "metadata": {},
    "outputs": [
@@ -439,11 +441,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32767c1b",
+   "cell_type": "markdown",
+   "id": "b66690c6",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# 2.6 Coordinate Search and Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caa6ebdf",
+   "metadata": {},
+   "source": [
+    "- method  \n",
+    "    restrict the set of search direction to the coordinate axes of the input space  \n",
+    "    one parameter at a time  \n",
+    "    try 2N(N=2) directions at 1 iteration  \n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251114120312.png)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7238e55f",
+   "metadata": {},
    "source": []
   }
  ],
