--- a/tutorial_code/lec5/lec5.ipynb
+++ b/tutorial_code/lec5/lec5.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9dec1888",
+   "metadata": {},
+   "source": [
+    "# SVM\n",
+    "- Perceptron -> Hard-Margin Support Vector Machine(SVM) -> Soft-Margin SVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74dbf86d",
+   "metadata": {},
+   "source": [
+    "# Margin Perceptron \n",
+    "- Cost \n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115090311.png)  \n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115090331.png)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8627cd0a",
    "metadata": {},
    "source": [
@@ -10,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b0d2ed6e",
    "metadata": {},
    "outputs": [],
@@ -18,15 +39,23 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import svm\n"
+    "from sklearn import svm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "36b61506",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv(\"svm_data.csv\")\n",
     "x = data[['x1','x2']].values\n",
@@ -35,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "78882250",
    "metadata": {},
    "outputs": [
@@ -45,7 +74,7 @@
        "(-0.1, 4.1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -69,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "da36abcf",
    "metadata": {},
    "outputs": [
@@ -82,7 +111,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7d5d3dc2",
    "metadata": {},
    "outputs": [
@@ -117,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "0da9c424",
    "metadata": {},
    "outputs": [
@@ -138,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fce2f583",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x3344cf6a0>]"
+       "[<matplotlib.lines.Line2D at 0x16c8528e0>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -173,12 +202,12 @@
     "x2p = (svm_model.coef_[0][0]*\n",
     "x1p+svm_model.intercept_)/(-svm_model.coef_[0][1])\n",
     "plt.plot(x1p,x2p)\n",
-    "plt.gca().set_aspect('equal')"
+    "# plt.gca().set_aspect('equal')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "05ccd27b",
    "metadata": {},
    "outputs": [
