Add Ch4-Second Order without exer

--- a/textbook/ch4_SecondOrder.ipynb
+++ b/textbook/ch4_SecondOrder.ipynb
@@ -11,14 +11,148 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa7cbcb8",
+   "metadata": {},
+   "source": [
+    "- Taylor Expansion Series \n",
+    "    - h(w): approximation of function at $w_0$ for f(w)\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& h(w) = \\Sigma_{i=0}^\\infty \\frac{f^{(i)}(w-w_0)}{i!}(w-w_0)^{i}\\\\\n",
+    "& First-Order:\\\\ \n",
+    "& h(w) = f(w_0) + f'(w_0)(w-w_0)\\\\\n",
+    "& Second-Order:\\\\\n",
+    "& h(w) = f(w_0)+f'(w_0)(w-w_0)+\\frac{1}{2}f^{(2)}(w-w_0)(w-w_0)^2\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0e672e39",
+   "metadata": {},
+   "source": [
+    "# 4.2 The Geometry of Second-Order Taylor Series \n",
+    "- single-input quadratic functions \n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115122956.png)  \n",
+    "    - convexity\n",
+    "        - convex if c >= 0 \n",
+    "        - concave if c =< 0\n",
+    "        - linear if c = 0\n",
+    "    - taylor expanion\n",
+    "        ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115124348.png)\n",
+    "\n",
+    "- multi-input quadratic functions \n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115123114.png) \n",
+    "    - convexity\n",
+    "        - convex if all eigenvalues of C >= 0 \n",
+    "        - concave if all eigenvalues of C <=0\n",
+    "        - non convex or concave otherwise\n",
+    "    - taylor expansion \n",
+    "        ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115124406.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5256bbd7",
+   "metadata": {},
+   "source": [
+    "# 4.3 Newton's Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0b5b697",
+   "metadata": {},
+   "source": [
+    "- by using the first-order condition to solve for the stationary point $w^*$\n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115130019.png)\n",
+    "- Newton's Method\n",
+    "    - repeatedly traveling to points defined by the stationary point of the second-order Taylor series approximation  \n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115130513.png) \n",
+    "    - algorithm  \n",
+    "    ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115130638.png)\n",
+    "        - solution in real world  \n",
+    "        ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115130752.png) \n",
+    "        - solution for computer system (avoiding 0 denominator)\n",
+    "            - add a small value $\\epsilon$ or a small value scaled unit matrix to the denominator\n",
+    "        ![image.png](https://raw.githubusercontent.com/Pokemongle/img_bed_0/main/img/20251115131303.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d225f2d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import auto diff\n",
+    "from autograd import grad\n",
+    "from autograd import hessian\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# newton method function\n",
+    "def newtons_method(g, max_its, w, p):\n",
+    "    # compute gradient and hess\n",
+    "    gradient = grad(g)\n",
+    "    hess = hessian(g)\n",
+    "\n",
+    "    # set eps for num stability\n",
+    "    epsilon = 10**(-7)\n",
+    "\n",
+    "    # newton method loop\n",
+    "    weight_history = [w] # container for weight history\n",
+    "    cost_history = [g(w)] # cost history container\n",
+    "    for k in range(max_its):\n",
+    "\n",
+    "        # evaluate the gradient and hessian\n",
+    "        grad_eval = gradient(w)\n",
+    "        hess_eval = hess(w)\n",
+    "\n",
+    "        # reshape hessian to square mat\n",
+    "        hess_eval.shape = (int((np.size(hess_eval))**(.5)),int(\n",
+    "            (np.size(hess_eval))**(.5)))\n",
+    "\n",
+    "        # solve second order system for weight update\n",
+    "        A = hess_eval + epsilon*np.eye(w.size)\n",
+    "        b = grad_eval\n",
+    "        w = np.linalg.solve(A,np.dot(A,w)-b)\n",
+    "\n",
+    "        if p:\n",
+    "            plt.plot(w, g(w),\"kx\")\n",
+    "\n",
+    "        # record weight and cost\n",
+    "        weight_history.append(w)\n",
+    "        cost_history.append(g(w))\n",
+    "\n",
+    "    return weight_history,cost_history\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "931438a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80d78cc1",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ubc_ml",
+   "language": "python",
+   "name": "ubc_ml"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
