add assign3 and midterm

--- a/tutorial_code/lec6/lec6.ipynb
+++ b/tutorial_code/lec6/lec6.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2a84e657",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "91aa6c95",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "8604380f",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "(2.0, 4.0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "dfdc2838",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,18 +395,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a8a0cbfd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 100)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xx1, xx2 = np.meshgrid(np.linspace(3,8,100),np.linspace(2,4,100))\n",
     "z = log_regress.predict(np.c_[xx1.ravel(), xx2.ravel()])\n",
@@ -415,17 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9394f7ea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x33517b3d0>"
+       "<matplotlib.contour.QuadContourSet at 0x314848c10>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -453,6 +445,36 @@
     "plt.ylim(2, 4)\n",
     "plt.contourf(xx1,xx2,z,alpha=.2) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8566086f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: 2\n",
+      "Class name: virginica\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_point = np.array([[7, 3.5]])   # 注意一定要是 2D 数组\n",
+    "pred = log_regress.predict(new_point)\n",
+    "print(\"Predicted class:\", pred[0])\n",
+    "print(\"Class name:\", iris.target_names[pred[0]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7922b3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
