Add project for MNIST parts

--- a/tutorial_code/lec5/lec5.ipynb
+++ b/tutorial_code/lec5/lec5.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "08601cdd",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
     }
    ],
    "source": [
-    "print(pd.crosstab(preds,yt))"
+    "print(pd.crosstab(preds,yt)) # pd.crosstab"
    ]
   },
   {
