--- a/tutorial_code/lec6/lec6.ipynb
+++ b/tutorial_code/lec6/lec6.ipynb
@@ -395,19 +395,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a8a0cbfd",
    "metadata": {},
    "outputs": [],
    "source": [
     "xx1, xx2 = np.meshgrid(np.linspace(3,8,100),np.linspace(2,4,100))\n",
-    "z = log_regress.predict(np.c_[xx1.ravel(), xx2.ravel()])\n",
+    "z = log_regress.predict(np.c_[xx1.ravel(), xx2.ravel()]) # np.c_\n",
     "z = z.reshape(xx1.shape) # be careful"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9394f7ea",
    "metadata": {},
    "outputs": [
@@ -443,12 +443,12 @@
     "plt.ylabel(iris.feature_names[1])\n",
     "plt.xlim(3, 8)\n",
     "plt.ylim(2, 4)\n",
-    "plt.contourf(xx1,xx2,z,alpha=.2) "
+    "plt.contourf(xx1,xx2,z,alpha=.2) # contourf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8566086f",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
     }
    ],
    "source": [
-    "new_point = np.array([[7, 3.5]])   # 注意一定要是 2D 数组\n",
+    "new_point = np.array([[7, 3.5]])   # 2d list\n",
     "pred = log_regress.predict(new_point)\n",
     "print(\"Predicted class:\", pred[0])\n",
     "print(\"Class name:\", iris.target_names[pred[0]])\n"
