--- a/tutorial_code/lec8/lec8.ipynb
+++ b/tutorial_code/lec8/lec8.ipynb
@@ -28,7 +28,7 @@
     "    return: centered X, shape same as X\n",
     "    \"\"\"\n",
     "    X_means = np.mean(X, axis=0)                     # (N,)\n",
-    "    X_centered = X - np.repeat(X_means.reshape(1,-1), P, axis=0)\n",
+    "    X_centered = X - np.repeat(X_means.reshape(1,-1), P, axis=0) # np.repeat\n",
     "    return X_centered\n",
     "\n",
     "\n",
